--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": ">=7.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.1@dev|~6.0"
+        "phpunit/phpunit": "^10.1.3|~6.0"
     },
     "autoload" : {
         "psr-4": {
